--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Cuichi Miess"
+  linkedin         : "cuichi-miess-023a79213/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
