--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profilpicCM.jpg"
+  avatar           : "images/profilpicCM.jpg"
   name             : "Cuichi N. Miess"
   pronouns         : # example: "she/her"  
   bio              : "Research fellow and doctoral candidate"
