--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Cuichi N. Miess"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : "Cuichi N. Miess"
+description              : "personal description"
 url                      : "https://cuichimiess.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "cuichimiess/cuichimiess.github.io"
