--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,17 +8,20 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+  - title: "Home"
+    url: /
   - title: "About"
-  url: "/"
-
+    url: /about/
   - title: "Research"
     url: /research/
+  - title: "Teaching"
+    url: /teaching/
+  - title: "CV"
+    url: /cv/
 
  # - title: "Talks"
  #   url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+ 
     
  # - title: "Portfolio"
  #   url: /portfolio/
@@ -26,8 +29,6 @@ main:
   #- title: "Blog Posts"
   #  url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
