--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "cuichimiess/cuichimiess.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/profilpicCM.jpg"
+  avatar           : "/images/3_1.1klein.jpg"
   name             : "Cuichi N. Miess"
   pronouns         : # example: "she/her"  
   bio              : "Research fellow and doctoral candidate"
