--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profilgit.jpg"
   name             : "Cuichi Miess"
   pronouns         : # example: "she/her"  
-  bio              : "Research fellow and doctoral candidate"
+  bio              : "Research associate and doctoral candidate"
   location         : "Munich, Germany"
   employer         : "LMU Munich"
   uri              : # URL
