--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Teaching"
     url: /teaching/
   - title: "CV"
-    url: /files/CVgit.pdf
+    url: /files/CVcompact.pdf
 
  # - title: "Talks"
  #   url: /talks/    
